<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_items"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/items" />
    <item
        android:id="@+id/nav_claims"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/claims" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/profile" />
</menu>
